--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --verbose --coverage --colors --watchAll",
+    "react-dev": "webpack --watch",
+    "server": "json-server db.json --static ./client/public"
   },
   "author": "",
   "license": "ISC",
@@ -12,12 +14,13 @@
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jquery": "^3.4.1",
     "lodash": "^4.17.15",
-    "npm": "^6.14.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "redux": "^4.0.5",
     "styled-components": "^5.0.1"
   },
   "devDependencies": {
@@ -30,9 +33,11 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.8.0",
+    "eslint-config-hackreactor": "github:reactorcore/eslint-config-hackreactor",
     "eslint-loader": "^3.0.3",
     "faker": "^4.1.0",
     "jest": "^25.1.0",
+    "json-server": "^0.16.1",
     "nodemon": "^2.0.2",
     "react-test-renderer": "^16.13.1",
     "style-loader": "^1.1.3",
